airflow/logs/dag_id=dag_diplomski_v2/run_id=manual__2024-08-22T20:28:06.310826+00:00/task_id=insert_into_table/attempt=1.log
[2024-08-22T20:28:13.166+0000] {local_task_job_runner.py:123} INFO - ::group::Pre task execution logs
[2024-08-22T20:28:13.181+0000] {taskinstance.py:2603} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_diplomski_v2.insert_into_table manual__2024-08-22T20:28:06.310826+00:00 [queued]>
[2024-08-22T20:28:13.188+0000] {taskinstance.py:2603} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_diplomski_v2.insert_into_table manual__2024-08-22T20:28:06.310826+00:00 [queued]>
[2024-08-22T20:28:13.188+0000] {taskinstance.py:2856} INFO - Starting attempt 1 of 6
[2024-08-22T20:28:13.199+0000] {taskinstance.py:2879} INFO - Executing <Task(PostgresOperator): insert_into_table> on 2024-08-22 20:28:06.310826+00:00
[2024-08-22T20:28:13.208+0000] {standard_task_runner.py:72} INFO - Started process 20147 to run task
[2024-08-22T20:28:13.211+0000] {standard_task_runner.py:104} INFO - Running: ['***', 'tasks', 'run', 'dag_diplomski_v2', 'insert_into_table', 'manual__2024-08-22T20:28:06.310826+00:00', '--job-id', '301', '--raw', '--subdir', 'DAGS_FOLDER/dag_news_scrape.py', '--cfg-path', '/tmp/tmprkei9udw']
[2024-08-22T20:28:13.213+0000] {standard_task_runner.py:105} INFO - Job 301: Subtask insert_into_table
[2024-08-22T20:28:13.248+0000] {task_command.py:467} INFO - Running <TaskInstance: dag_diplomski_v2.insert_into_table manual__2024-08-22T20:28:06.310826+00:00 [running]> on host 7585e18d2106
[2024-08-22T20:28:13.326+0000] {taskinstance.py:3122} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='matea' AIRFLOW_CTX_DAG_ID='dag_diplomski_v2' AIRFLOW_CTX_TASK_ID='insert_into_table' AIRFLOW_CTX_EXECUTION_DATE='2024-08-22T20:28:06.310826+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-08-22T20:28:06.310826+00:00'
[2024-08-22T20:28:13.327+0000] {taskinstance.py:731} INFO - ::endgroup::
[2024-08-22T20:28:13.329+0000] {sql.py:282} INFO - Executing: 
            insert into news(dt, news_id, text, label) values None;
            
[2024-08-22T20:28:13.337+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-08-22T20:28:13.344+0000] {base.py:84} INFO - Retrieving connection 'postgres_localhost'
[2024-08-22T20:28:13.351+0000] {sql.py:509} INFO - Running statement: 
            insert into news(dt, news_id, text, label) values None;
            , parameters: None
[2024-08-22T20:28:13.353+0000] {taskinstance.py:3301} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 288, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "None"
LINE 2: ...     insert into news(dt, news_id, text, label) values None;
                                                                  ^

[2024-08-22T20:28:13.364+0000] {taskinstance.py:1225} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_diplomski_v2, task_id=insert_into_table, run_id=manual__2024-08-22T20:28:06.310826+00:00, execution_date=20240822T202806, start_date=20240822T202813, end_date=20240822T202813
[2024-08-22T20:28:13.375+0000] {taskinstance.py:340} INFO - ::group::Post task execution logs
[2024-08-22T20:28:13.375+0000] {standard_task_runner.py:124} ERROR - Failed to execute job 301 for task insert_into_table (syntax error at or near "None"
LINE 2: ...     insert into news(dt, news_id, text, label) values None;
                                                                  ^
; 20147)
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/task/task_runner/standard_task_runner.py", line 117, in _start_by_fork
    ret = args.func(args, dag=self.dag)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/cli_config.py", line 49, in command
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/cli.py", line 115, in wrapper
    return f(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 483, in task_run
    task_return_code = _run_task_by_selected_method(args, _dag, ti)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 256, in _run_task_by_selected_method
    return _run_raw_task(args, ti)
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/cli/commands/task_command.py", line 341, in _run_raw_task
    return ti._run_raw_task(
           ^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/session.py", line 97, in wrapper
    return func(*args, session=session, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 2995, in _run_raw_task
    return _run_raw_task(
           ^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 273, in _run_raw_task
    TaskInstance._execute_task_with_callbacks(
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3149, in _execute_task_with_callbacks
    result = self._execute_task(context, task_orig)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 3173, in _execute_task
    return _execute_task(self, context, task_orig)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 767, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 733, in _execute_callable
    return ExecutionCallableRunner(
           ^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/utils/operator_helpers.py", line 252, in run
    return self.func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 406, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 288, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 456, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 514, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "None"
LINE 2: ...     insert into news(dt, news_id, text, label) values None;
                                                                  ^

[2024-08-22T20:28:13.431+0000] {local_task_job_runner.py:261} INFO - Task exited with return code 1
[2024-08-22T20:28:13.443+0000] {taskinstance.py:3891} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-08-22T20:28:13.445+0000] {local_task_job_runner.py:240} INFO - ::endgroup::
